--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "codigo-form",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "author": "Chris Doty",
+  "license": "MIT",
   "description": "",
   "main": "dist/codigo-form.ssr.js",
   "browser": "dist/codigo-form.esm.js",
@@ -11,13 +13,15 @@
     "src/**/*.vue"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve dev/serve.js",
+    "serve": "vue-cli-service serve dev/serve.js --port=8182",
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.5.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -34,6 +38,8 @@
     "rollup-plugin-vue": "^5.1.6",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.1.0",
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
     "husky": "^4.2.5"
@@ -48,5 +54,10 @@
   },
   "engines": {
     "node": ">=10"
-  }
+  },
+  "browserslist": [
+    "> 2%",
+    "last 2 versions",
+    "ie > 10"
+  ]
 }
