--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
+      - name: Conventional Changelog Action
+        uses: cdotyone/conventional-changelog-action@v3.8.2
+        with:
+          github-token: ${{ github.token }}
+          tag-prefix: 'v'
+          release-count: '20'
       - run: npm ci
       - run: npm publish
         env:
