--- a/package.json
+++ b/package.json
@@ -21,29 +21,30 @@
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
   "dependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
     "bootstrap": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-alias": "^2.2.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
-    "cross-env": "^7.0.2",
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-replace": "^3.0.1",
+    "babel": "^6.23.0",
+    "cross-env": "^7.0.3",
+    "dart-sass": "^1.25.0",
     "minimist": "^1.2.5",
-    "rollup": "^2.7.3",
+    "node-sass": "^7.0.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-vue": "^5.1.6",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.1.0",
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
-    "husky": "^4.2.5"
+    "rollup-plugin-bundle-scss": "^0.1.3",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "vue": "^3.0.0"
   },
   "husky": {
     "hooks": {
@@ -51,7 +52,10 @@
     }
   },
   "peerDependencies": {
-    "vue": "^2.6.11"
+    "rollup": "^2.67.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.0.0"
   },
   "engines": {
     "yarn": "^1.22.17"
