--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -1,6 +1,7 @@
 name: Vue Component Package
 on:
   [push]
+    branches: main
 
 jobs:
   build:
@@ -9,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
       - run: npm install
 
   publish-npm:
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
           registry-url: https://registry.npmjs.org/
       - name: Conventional Changelog Action
         uses: cdotyone/conventional-changelog-action@v3.8.2
@@ -30,5 +31,6 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm publish
+        if: github.ref == 'refs/heads/main'
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
