--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -2,6 +2,7 @@ name: Vue Component Package
 on:
   [push]
     branches: main
+  [pull_request]
 
 jobs:
   build:
@@ -31,6 +32,6 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm publish
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
